# src/routes/root.routes.ts
@@ -5,6 +5,7 @@ import { Router } from "express";
 import UserRouter from '@routes/user.routes'
 import AuthRouter from '@routes/auth.routes'
 import UpdateRouter from '@routes/update.routes'
+import InstituteRouter from '@routes/institute.routes'
 
 // Constants
 import { ROUTES } from "@utils/constants/routes";
@@ -14,5 +15,6 @@ const router = Router();
 router.use(ROUTES.AUTH.BASE, AuthRouter);
 router.use(ROUTES.USER.BASE, UserRouter);
 router.use(ROUTES.UPDATE.BASE, UpdateRouter);
+router.use(ROUTES.INSTITUTE.BASE, InstituteRouter);
 
 export default router;
